--- a/reels.html
+++ b/reels.html
@@ -89,14 +89,14 @@
 
     /* Reel styles (unchanged from your original) */
     .reel {
-      scroll-snap-align: start;
-      height: 100vh;
-      background-color: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
+  scroll-snap-align: start;
+  min-height: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
     .reel-inner {
       width: 90%;
       max-width: 540px;
