--- a/reels.html
+++ b/reels.html
@@ -87,16 +87,16 @@
       font-size: 1.3rem;
     }
 
-    /* Reel styles (unchanged from your original) */
+    /* REELS UI — with fixed height */
     .reel {
-  scroll-snap-align: start;
-  min-height: 100%;
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
+      scroll-snap-align: start;
+      height: 100%;
+      background-color: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
     .reel-inner {
       width: 90%;
       max-width: 540px;
